<resources>
    <string name="app_name">FupsUISample</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hesaplar">Hesaplar</string>
    <string name="kartlar">Kartlar</string>
    <string name="lemler">İşlemler</string>
    <string name="kampanyalar">Kampanyalar</string>
    <string name="chat">Chat</string>
    <string name="fups">FUPS</string>
    <string name="kampanyalar1">KAMPANYALAR</string>
    <string name="kampanya_ara">Kampanya ara</string>
    <string name="tum_kampanyalar">TÜM KAMPANYALAR</string>
    <string name="temassiz_n_lem">TEMASSIZ\n İŞLEM</string>
    <string name="dondur">DONDUR</string>
    <string name="ayarlar">AYARLAR</string>
    <string name="ba_li_hesaplar">BAĞLI HESAPLAR</string>
    <string name="lk_hesabim">İLK HESABIM</string>
    <string name="_0_00">₺0,00</string>
    <string name="right_arrow">›</string>
    <string name="ikili_hesap">İKİLİ HESAP</string>
    <string name="aktif_et">AKTİF ET</string>
    <string name="ara">Ara</string>
    <string name="chat1">CHAT</string>
    <string name="nokta">.</string>
    <string name="ilkkk_hesabim">İLK HESABIM</string>
    <string name="hesap_no_123456789123456">HESAP NO: 123456789123456</string>
    <string name="_0_00money">₺0,00</string>
    <string name="plus">+</string>
    <string name="yükle">YÜKLE</string>
    <string name="g_nder">GÖNDER</string>
    <string name="iste">İSTE</string>
    <string name="faturani_nöde">FATURANI\n ÖDE</string>
    <string name="nokta2">...</string>
    <string name="sec_sec_hesap">SEÇ SEÇ HESAP</string>
    <string name="hemen_istedi_in_ki_ilere_ortak_n_harcama_limiti_tan_mla_n_harcamazlarsa_paran_sende_n_kals_n">Hemen istediğin kişilere ortak\n harcama limiti tanımla,\n harcamazlarsa paran sende,\n kalsın!</string>
    <string name="işşlemler">İŞLEMLER</string>
</resources>