<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.HomeFragment"
    android:background="@color/home_icon">


    <ImageView
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/text_fups"
        android:src="@drawable/bell_icon"/>


    <TextView
        android:id="@+id/text_fups"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fups"
        android:textStyle="bold"
        android:textColor="@color/Fups"
        android:textSize="36sp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:layout_width="43dp"
        android:layout_height="43dp"
        app:layout_constraintStart_toEndOf="@id/text_fups"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/fups_sa"
        android:layout_marginTop="16dp"
        android:layout_marginStart="64dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraint_one"

        android:text="@string/nokta"
        android:textStyle="bold"
        android:textSize="24sp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_one"
        android:layout_width="match_parent"
        android:layout_height="310dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/text_fups"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="24dp"
        android:background="@drawable/hesap"
        android:backgroundTint="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:background="@drawable/constraint_one"
            android:backgroundTint="@color/Constraint_one"
            android:layout_margin="2dp">

            <ImageView
                android:id="@+id/star_icon"
                android:layout_width="25dp"
                android:layout_height="25dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/sharp_star_24"
                app:layout_constraintHorizontal_bias="0.08"
                android:layout_marginTop="16dp"
                />

            <TextView
                android:id="@+id/text_hesap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/star_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/ilkkk_hesabim"
                android:textSize="17sp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias=".12"
                android:textStyle="bold"/>
            
            <ImageView
                android:id="@+id/stats"
                android:layout_width="20dp"
                android:layout_height="20dp"
                app:layout_constraintStart_toStartOf="@id/text_hesap"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/stats_chart_icon"
                android:layout_marginTop="16dp"
                app:layout_constraintHorizontal_bias=".75"/>

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                app:layout_constraintStart_toStartOf="@id/stats"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/baseline_settings_24"
                android:layout_marginTop="16dp"
                app:layout_constraintHorizontal_bias=".75"/>

            <TextView
                android:id="@+id/hesap_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="9sp"
                app:layout_constraintStart_toStartOf="@id/text_hesap"
                app:layout_constraintTop_toBottomOf="@id/text_hesap"
                app:layout_constraintEnd_toEndOf="@id/text_hesap"
                android:layout_marginStart="22dp"
                android:text="@string/hesap_no_123456789123456"/>

            <ImageView
                android:layout_width="12dp"
                android:layout_height="12dp"
                app:layout_constraintStart_toEndOf="@id/hesap_no"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_hesap"
                android:src="@drawable/copy_icon"
                app:layout_constraintHorizontal_bias=".05"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginBottom="16dp"
                android:text="@string/_0_00money"
                android:textStyle="bold"
                android:textSize="32sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/hesap_no"
                app:layout_constraintHorizontal_bias="0.454"
                app:layout_constraintStart_toStartOf="@id/star_icon" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_plus"
            android:layout_width="45dp"
            android:layout_height="45dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/btn_plus"
            android:text="@string/plus"
            android:textSize="30sp"
            android:textColor="@color/white"
            app:layout_constraintHorizontal_bias=".1"
            android:layout_marginBottom="34dp"/>

        <TextView
            android:id="@+id/text_yukle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/btn_plus"
            app:layout_constraintTop_toBottomOf="@id/btn_plus"
            android:text="@string/yükle"
            android:layout_marginTop="4dp"
            android:textSize="12sp"
            android:layout_marginStart="26dp"
            android:textStyle="bold"
            />

        <ImageButton
            android:id="@+id/btn_up"
            android:layout_width="45dp"
            android:layout_height="45dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/btn_gonder"
            android:src="@drawable/up_icon"
            android:textSize="30sp"
            android:textColor="@color/btn_up"
            app:layout_constraintHorizontal_bias=".32"
            android:layout_marginBottom="34dp"/>

        <TextView
            android:id="@+id/text_gonder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/text_yukle"
            app:layout_constraintEnd_toEndOf="@id/btn_up"
            app:layout_constraintTop_toBottomOf="@id/btn_up"
            android:text="@string/g_nder"
            android:layout_marginTop="4dp"
            android:textSize="12sp"
            android:layout_marginStart="36dp"
            android:textStyle="bold"
            />

        <ImageButton
            android:id="@+id/btn_down"
            android:layout_width="45dp"
            android:layout_height="45dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/btn_gonder"
            android:src="@drawable/down_icon"
            android:textSize="50sp"
            android:textColor="@color/btn_up"
            app:layout_constraintHorizontal_bias=".55"
            android:layout_marginBottom="34dp"/>

        <TextView
            android:id="@+id/text_iste"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/text_gonder"
            app:layout_constraintEnd_toEndOf="@id/btn_down"
            app:layout_constraintTop_toBottomOf="@id/btn_down"
            android:text="@string/iste"
            android:textSize="12sp"
            android:layout_marginStart="26dp"
            android:layout_marginTop="4dp"
            android:textStyle="bold"
            />

        <ImageButton
            android:id="@+id/faturanı_ode"
            android:layout_width="45dp"
            android:layout_height="45dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/btn_gonder"
            android:text=""
            android:textSize="50sp"
            android:textColor="@color/btn_up"
            app:layout_constraintHorizontal_bias=".77"
            android:layout_marginBottom="34dp"
            android:src="@drawable/bill_icon"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="29dp"
            app:layout_constraintStart_toEndOf="@id/text_iste"
            app:layout_constraintEnd_toEndOf="@id/faturanı_ode"
            app:layout_constraintTop_toBottomOf="@id/faturanı_ode"
            android:text="@string/faturani_nöde"
            android:textSize="12sp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="4dp"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/faturanı_ode"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/nokta2"
            android:textSize="26sp"
            android:layout_marginStart="36dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@id/faturanı_ode"/>



    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="170dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraint_one"
        android:layout_marginTop="48dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/secsechesap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/sec_sec_hesap"
            android:textStyle="bold"
            android:layout_marginTop="14dp"
            app:layout_constraintHorizontal_bias=".1"
            android:textColor="@color/secsechesap"
            />

        <ImageView
            android:id="@+id/ekleme"
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/secsechesap"
            app:layout_constraintEnd_toEndOf="@id/secsechesap"
            android:src="@drawable/secsec"
            android:layout_marginTop="16dp"
            />
        <TextView
            android:id="@+id/text_yazı"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:text="@string/hemen_istedi_in_ki_ilere_ortak_n_harcama_limiti_tan_mla_n_harcamazlarsa_paran_sende_n_kals_n"
            app:layout_constraintStart_toEndOf="@id/ekleme"
            app:layout_constraintTop_toBottomOf="@id/secsechesap"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="24sp"
            android:layout_marginStart="8dp"
            android:textColor="@color/paralimityazısı"/>

        <ImageView
            android:layout_width="90dp"
            android:layout_height="140dp"
            app:layout_constraintStart_toEndOf="@id/text_yazı"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="12dp"
            android:src="@drawable/yuzler"/>




</androidx.constraintlayout.widget.ConstraintLayout>





</androidx.constraintlayout.widget.ConstraintLayout>